[aliases]
release = sdist bdist_wheel
test = pytest

[bdist_wheel]
universal = 1

[metadata]
name = chaostoolkit-prometheus
url = https://chaostoolkit.org
project_urls =
    Docs: RTD = https://chaostoolkit.org
    CI: GitHub = https://github.com/chaostoolkit-incubator/chaostoolkit-prometheus/actions
    GitHub: issues = https://github.com/chaostoolkit-incubator/chaostoolkit-prometheus/issues
    GitHub: repo = https://github.com/chaostoolkit-incubator/chaostoolkit-prometheus
description = Chaos Toolkit extension querying/sending metrics to Prometheus
long_description = file: README.md
long_description_content_type = text/markdown
author = Chaos Toolkit
author_email = contact@chaostoolkit.org
zip_safe = False
license_file = LICENSE
platforms = any
license = Apache License Version 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: Freely Distributable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: CPython

[options]
use_scm_version = True
python_requires = >=3.7
packages = find:
include_package_data = True
setup_requires =
    pytest_runner
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0
install_requires =
    chaostoolkit-lib~=1.27
    requests
    dateparser
    maya
    prometheus_client
tests_require = 
    requests-mock
    coverage
    pytest~=6.2; python_version >= '3.6'
    pytest-cov
    pytest-sugar
    black
    isort
    flake8

[tool:pytest]
testpaths = tests

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -v
    -rxs
    --cov chaospromtheus
    --cov-report term-missing:skip-covered
    --cov-report xml
    -p no:warnings

[flake8]
max-line-length=80

[tool:isort]
line_length=80